Finalizing the project

--- a/navbar.html
+++ b/navbar.html
@@ -26,10 +26,10 @@
     <div id="main">
       <div>Reebok</div>
       <div>
-        <div>Men</div>
+        <div><a href="/Team-55-Collaboration/mens.html">Men</a> </div>
         <div>Women</div>
-        <div>Login</div>
-        <div>Signup</div>
+        <div><a href="/Team-55-Collaboration/login.html">Login</a> </div>
+        <div> <a href="/Team-55-Collaboration/signup.html">Signup</a> </div>
       </div>
     </div>
   </body>
