--- a/mens.html
+++ b/mens.html
@@ -5,8 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #main{
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+            margin: auto;
+            text-align: center;
+            font-size: 20px;
+        }
+        img{
+            width: 100%;
+            height: 400px;
+            margin: auto;
+        }
+        h2{
+            width: 100%;
+            margin: auto;
+            font-weight: bold;
+        }
+        .price{
+            display: flex;
+            margin: auto;
+            justify-content: space-around;
+            width: 70%;
+        }
+
+    </style>
 </head>
 <body>
-   <img src="https://masai-course.s3.ap-south-1.amazonaws.com/editor/uploads/2022-04-23/mensPage_879698.png" alt=""> 
+   <div id="main">
+    <div>
+        <img src="https://assetscdn1.paytm.com/images/catalog/product/A/AP/APPPAUSE-BLACK-PAUS57747861200F37/1562877340930_1..jpg?imwidth=320&impolicy=hq" alt="">
+        <h2>Pause</h2>
+        <p style="color:grey ;">Men Cotton Long Sleeves Shrug</p>
+        <div class="price">
+            <p> &#8377; 350 <s> &#8377; 1400</s> </p>
+            <p style="color:rgb(34, 201, 34) ;"> -76%</p>
+        </div>
+        
+    </div>
+    <div>
+        <img src="https://n2.sdlcdn.com/imgs/i/w/t/Jubination-Grey-V-Neck-Sweater-SDL564794936-1-a4082.jpeg" alt="">
+        <h2>JUBINATION</h2>
+        <p style="color:grey ;">Men Wool Sleeveless Sweater Pack Of 1</p>
+        <div class="price">
+            <p>&#8377; 799 <s> &#8377; 1499</s> </p>
+            <p style="color:rgb(34, 201, 34) ;">-47%</p>
+        </div>
+        
+    </div>
+   </div>
 </body>
 </html>
